improvement in data transfer from phone to desktop